# deepwiki2md

./: .gitignore  LICENSE  MANIFEST.in  README.md  analyze_output.py  browser_scraper.py  debug_svg.py  pyproject.toml  requirements.txt  setup.py  test_real_svg.py  test_scraper.py  test_svg_simple.py
deepwiki2md/: __init__.py  cli.py  converter.py  fallback_scraper.py  scraper.py  svg_converter.py  utils.py
docs/: api.md  installation.md  usage.md
examples/: advanced_usage.py  basic_usage.py  batch_scraping.py
test_output/Amalgam/: Getting_Started.md  Overview.md
tests/: test_converter.py  test_utils.py
